@@ -4,7 +4,8 @@ Antiprism
 Notes for Antiprism 0.24
 ------------------------
 
-This is a minor release. It includes...
+This is a minor release. It includes a new program, to_nfold (to change
+the rotational symmetry of a polyhedron).
 
 Please look out for bugs, or other issues, and report them to me
 at: adrian@antiprism.com
