@@ -1,0 +1,36 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man
+.TH TO_NFOLD  "1" " " "to_nfold Antiprism 0.23 - http://www.antiprism.com" "User Commands"
+.SH NAME
+to_nfold - change the rotational symmetry of a polyhedron
+.SH SYNOPSIS
+.B to_nfold
+[\fIoptions\fR] \fIfraction \fR[\fIinput_file\fR]
+.SH DESCRIPTION
+Generalise an axial model by changing its rotational symmetry. Read a model,
+in OFF format, with an m\-fold rotational axis on the z\-axis, and create a
+new model, generally non\-planar, with the same relative connections, but
+with an n\-fold axis instead. fraction is given as n, or n/d (n and d
+integers). Vertices of a face originally separated by x/m of a turn around
+the z\-axis will be separated by xd/n of a turn in the final model. If
+input_file is not given the program reads from standard input. to_nfold is based
+on an idea by Bruce R. Gilson.
+.PP
+Options
+.HP
+\fB\-h\fR,\-\-help this help message (run 'off_util \fB\-H\fR help' for general help)
+.HP
+\fB\-\-version\fR version information
+.HP
+\fB\-o\fR <file> write output to file (default: write to standard output)
+.SH "SEE ALSO"
+The full documentation for
+.B to_nfold
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B to_nfold
+programs are properly installed at your site, the command
+.IP
+.B info to_nfold
+.PP
+should give you access to the complete manual.
